--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1>{{ site.title }}</h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>{{ site.description }}</p>
 
       </header>
       <section>
@@ -30,7 +30,7 @@
       </section>
       <footer>
         {% if site.footer %}
-        <p>{{ site.footer }}</p>
+        <p><small>{{ site.footer }}</small></p>
         {% endif %}
       </footer>
     </div>
