--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,8 @@
   </head>
   <body>
     <div class="wrapper">
+    {% include navigation.html %}
       <header>
-        <h1>{{ site.title }}</h1>
-        
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
@@ -29,9 +28,11 @@
 
       </section>
       <footer>
-        {% if site.footer %}
-        <p><small>{{ site.footer }}</small></p>
-        {% endif %}
+        <p><small>
+            {{ site.footer }}<br />
+            <a href="mailto:{{ site.email }}">{{ site.email }}</a><br />
+            {{ site.tel }}
+        </small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
