--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,44 @@
 @import "{{ site.theme }}";
 
 
-p {
-  margin: 80px 0px;
+body {
+    padding: 0px 0px;
+}
+
+content p {
+    margin: 80px 0px;
+}
+
+footer p {
+    margin: 0px 0px;
+}
+
+nav {
+    width: 100%;
+    height: 30px;
+    background-color: #fd7;
+    margin: 0px 0px 20px;
+    padding: 0px 0px;
+    text-align: center;
+}
+
+nav span {
+    height: 30px;
+    margin: 0px 50px;
+}
+
+nav .current {
+    background-color: #cdf
+}
+
+section {
+    padding: 0px 0px;
+}
+
+header {
+    width: 320px;
+}
+
+header img {
+    margin-bottom: 20px;
 }
